# banco-de-questoes-pas3

./: .gitignore  README.md  pyproject.toml
questoes/: main.py  multi_column.py  pesquisa.py
